facet-postcard-legacy/tests/snapshots/pretty_error_messages__pretty_nested_struct_error.snap
---
source: facet-postcard/tests/pretty_error_messages.rs
expression: err_msg
---
  × Unsupported scalar type: ConstTypeId
   ╭─[Inner.rs:2:1]
 1 │ #[derive(Facet)]
 2 │ struct Inner {
   · ▲
 3 │     name: String,
 4 │     type_id: ConstTypeId,
   ·              ─────┬─────
   ·                   ╰── error here
 5 │ }
   ╰────

Error: 
  × in type
   ╭─[Outer.rs:2:1]
 1 │ #[derive(Facet)]
 2 │ struct Outer {
   · ▲
 3 │     label: String,
 4 │     inner: Inner,
   ·            ──┬──
   ·              ╰── via this field
 5 │ }
   ╰────
